# hrm-meditation

./: .gitignore  .pre-commit-config.yaml  architecture.puml  pyproject.toml
hrm_meditation/: __main__.py  fake_hrm.py  garmin_hrm.py  interfaces.py  observables.py
